[package]
name = "group-runner"
version = "0.1.2"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Group Rust executable output in GitHub logs"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smoelius/group-runner"

[dev-dependencies]
assert_cmd = "2.0"
regex = "1.11"
snapbox = "0.6"
tempfile = "3.14"
