[package]
name = "group-runner"
version = "0.1.3"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Group Rust executable output in GitHub logs"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smoelius/group-runner"

[dev-dependencies]
assert_cmd = "2.1"
regex = "1.12"
snapbox = "1.0"
tempfile = "3.25"
